Fix ESC proof-result attribution for multi-file projects and non-open files
- Remove bare-name fallback from lookupResult: matching by simple method name
  cross-file caused proof results from one file to appear on same-named methods
  in another file during incremental updates
- Store ESC ASTs in live cache (runEscDir, runEscDirWithContext, legacy variant)
  so updateEscStatus can find method positions even without a prior check run
- updateEscStatus uses getNav() to find ASTs from both live and nav cache
- scheduleEscForPaths final loop iterates collectJavaFiles(paths) instead of
  lastContent, so non-open files get their proofResults populated
- Refactor diagnostics-by-method: EscProgressCallback carries diagsByMethod;
  updateEscStatusPartial uses per-method diags instead of line-range filtering;
  proofResultToStatus takes diagCount instead of diags/start/end
- Remove source parameter from findMethodsFromAst: code-lens position comes
  from AST start position; findSpecStart removed
- Add debugContent method (calls commented out) summarising all server caches
  grouped by project; add forEachNavSection to ASTCache

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>